--- a/Frontend/src/Profile.css
+++ b/Frontend/src/Profile.css
@@ -1,9 +1,9 @@
-body {
+/* body {
   background: radial-gradient(ellipse at center, #f7f9f5 0%, #e2e4d0 100%);
   background-size: 400% 400%;
   height: 100vh;
   margin: 0;
-}
+} */
 
 .navbar {
   position: fixed;
@@ -12,8 +12,11 @@ body {
   width: 100%;
   z-index: 1000;
   height: 80px;
-
-  opacity: 0.9;
+  background-color: rgba(255, 255, 255, 0.65);
+  backdrop-filter: blur(12px);
+}
+.dark-mode .navbar{
+  background-color: rgba(0, 0, 0, 0.65);
 }
 .add-post-btn {
   position: fixed;
@@ -38,8 +41,8 @@ body {
 }
 
 .profile-section {
-  margin-top: 80px;
-  padding: 20px;
+  margin-top: 0px;
+  padding: 70px;
   min-height: 100vh;
 }
 
@@ -200,7 +203,9 @@ body {
   color: #555;
   margin: 0 10px;
 }
-
+.dark-mode .nav-link{
+  color: white;
+}
 .nav-tabs .nav-link.active {
   border-radius: 10px;
   color:  #0d824c;
